--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@
 .skills-grid {
   grid-template-columns: repeat(auto-fill, minmax(min(10rem, 100%), 1fr));
 }
+
+@media not all and (min-width: 425px) {
+  .skills-grid {
+    grid-template-columns: repeat(auto-fill, minmax(min(6rem, 100%), 1fr));
+  }
+}
